syntax = "proto3";

package imgstorage;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option go_package = "./;imgstorageapi";

message UploadImageRequest {
	oneof data {
		string name = 1;
		bytes chunk_data = 2;
	}
}

message UploadImageResponse {
	uint32 size = 1;
}

message DownloadImageRequest {
	string name = 1;
}

message DownloadImageResponse {
	bytes chunk_data = 1;
}

message ImageInfo {
	string name = 1;
	google.protobuf.Timestamp modifiedAt = 2;
}

message GetListImageResponse {
	repeated ImageInfo image_info = 1;
}

service ImgStorage {
	rpc UploadImage (stream UploadImageRequest) returns (UploadImageResponse) {}
	rpc DownloadImage (DownloadImageRequest) returns (stream DownloadImageResponse) {}
	rpc GetListImage (google.protobuf.Empty) returns (GetListImageResponse) {}
}

